--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,19 @@ a:visited {
   color: orangered;
 }
 
+.rewind-header {
+  color: deepskyblue;
+  text-shadow: 1px 1px 2px black;
+  font-size: xx-large;
+  font-family: Helvetica;
+}
+.rewind-description {
+  text-shadow: 1px 1px 2px black;
+  font-size: small;
+  font-family: cursive;
+  display: inline-block;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
