--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ a:visited {
   font-size: xx-large;
   font-family: Helvetica;
 }
+
 .rewind-description {
   text-shadow: 1px 1px 2px black;
   font-size: small;
@@ -41,17 +42,17 @@ a:visited {
   height: 100vh
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/*@media (prefers-reduced-motion: no-preference) {*/
+/*  .App-logo {*/
+/*    animation: App-logo-spin infinite 20s linear;*/
+/*  }*/
+/*}*/
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*@keyframes App-logo-spin {*/
+/*  from {*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*  to {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
