--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,40 @@
   font-size: 25px;
 }
 
+.homepage{
+  padding-top: 60px;
+}
+
 a:link {
   color: white;
 }
 
 a:visited {
   color: orangered;
+}
+
+.experience {
+  padding-top: 60px;
+}
+
+.playVideo {
+  position: relative;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  width: 100%;
+}
+
+.responsive-iframe {
+  overflow: hidden;
+  border: 0;
+  align-self: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .rewind-header {
@@ -38,6 +66,7 @@ a:visited {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  padding-top: 60px;
   width: 100vw;
   height: 100vh
 }
